<resources>
    <string name="app_name">weatherapp</string>
    <string name="title_home">Home</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="temperature">Temperature</string>
    <string name="celcius">%!%°C</string>
    <string name="locations">Locations</string>
    <string name="search_location">Search Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="warning">Warning!</string>
    <string name="cancel">Cancel</string>
    <string name="approve">Approve</string>
    <string name="dialog_question">Are you sure you want to remove this location from your locations list?</string>
    <string name="add_location">ADD LOCATION</string>
    <string name="search_nearby">Search\nNearby</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="back_to_login">Back To Login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="seven_days">7 days weather forecast</string>
    <string name="title_graph">Graph</string>
</resources>