<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_location"
    tools:context=".ui.login.fragment.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_80dp"
        android:src="@drawable/ic_kotlin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        style="@style/AutoCompleteTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_30dp"
        android:layout_marginTop="@dimen/dimen_64dp"
        android:autofillHints="emailAddress"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        style="@style/AutoCompleteTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_30dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <View
        android:id="@+id/viewCenter"
        android:layout_width="@dimen/dimen_1dp"
        android:layout_height="@dimen/dimen_50dp"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />


    <com.portal.weatherapp.utilities.customviews.WeatherContinueButton
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/viewCenter"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <com.portal.weatherapp.utilities.customviews.WeatherContinueButton
        android:id="@+id/btnSignIn"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        app:layout_constraintStart_toEndOf="@+id/viewCenter"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />


    <LinearLayout
        android:id="@+id/btnGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_25dp"
        android:background="@drawable/bg_cards"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dimen_10dp"
        app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_google"
            app:layout_constraintStart_toStartOf="@id/btnLogin"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            tools:ignore="ContentDescription" />

        <com.portal.weatherapp.utilities.customviews.WeatherCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_google"
            android:textSize="@dimen/ts_14sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
