<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_homepage"
    tools:context=".ui.home.HomeFragment">

    <com.portal.weatherapp.utilities.customviews.WeatherCustomTextView
        android:id="@+id/tvCity"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_52dp"
        android:textSize="@dimen/ts_24sp"
        app:layout_constraintEnd_toEndOf="@+id/clSunset"
        app:layout_constraintStart_toStartOf="@+id/clSunset"
        app:layout_constraintTop_toTopOf="parent"
        app:textAlignment="center"
        tools:text="Istanbul, Turkey" />

    <LinearLayout
        android:id="@+id/llSearchNearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_button"
        android:paddingVertical="@dimen/dimen_4dp"
        android:paddingHorizontal="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/dimen_12dp"
        app:layout_constraintBottom_toTopOf="@+id/tvCity"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:src="@drawable/ic_add_location" />

        <com.portal.weatherapp.utilities.customviews.WeatherCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:textType="Semibold"
            android:layout_marginStart="@dimen/dimen_2dp"
            android:textSize="@dimen/ts_12sp"
            android:layout_gravity="center"
            android:text="@string/search_nearby" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivWeatherIcon"
        android:layout_width="@dimen/dimen_80dp"
        android:layout_height="@dimen/dimen_80dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCity" />

    <com.portal.weatherapp.utilities.customviews.WeatherCustomTextView
        android:id="@+id/tvDesc"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:textSize="@dimen/ts_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivWeatherIcon"
        app:textAlignment="center"
        tools:text="Clear Sky" />

    <com.portal.weatherapp.utilities.customviews.WeatherCustomTextView
        android:id="@+id/tvCelcius"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/ts_50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc"
        app:textAlignment="center"
        tools:text="32°C" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSunset"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60dp"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:background="@drawable/bg_cards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCelcius">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSunrise"
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginStart="@dimen/dimen_40dp"
            android:src="@drawable/ic_sunrise"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/clSunset"
            app:layout_constraintTop_toTopOf="@id/clSunset" />

        <com.portal.weatherapp.utilities.customviews.WeatherCustomTextView
            android:id="@+id/tvSunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:text="@string/sunrise"
            android:textSize="@dimen/ts_14sp"
            app:layout_constraintStart_toEndOf="@id/ivSunrise"
            app:layout_constraintTop_toTopOf="@+id/ivSunrise"
            app:textType="Semibold" />

        <com.portal.weatherapp.utilities.customviews.WeatherCustomTextView
            android:id="@+id/tvSunriseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/ts_14sp"
            app:layout_constraintBottom_toBottomOf="@id/ivSunrise"
            app:layout_constraintEnd_toEndOf="@+id/tvSunrise"
            app:layout_constraintStart_toStartOf="@+id/tvSunrise"
            tools:text="22:23" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSunset"
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginEnd="@dimen/dimen_40dp"
            android:src="@drawable/ic_sunset"
            app:layout_constraintBottom_toBottomOf="@id/clSunset"
            app:layout_constraintEnd_toEndOf="@id/clSunset"
            app:layout_constraintTop_toTopOf="@id/clSunset" />

        <com.portal.weatherapp.utilities.customviews.WeatherCustomTextView
            android:id="@+id/tvSunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:text="@string/sunset"
            android:textSize="@dimen/ts_14sp"
            app:layout_constraintEnd_toStartOf="@id/ivSunset"
            app:layout_constraintTop_toTopOf="@id/ivSunset"
            app:textType="Semibold" />

        <com.portal.weatherapp.utilities.customviews.WeatherCustomTextView
            android:id="@+id/tvSunsetValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/ts_14sp"
            app:layout_constraintBottom_toBottomOf="@id/ivSunset"
            app:layout_constraintEnd_toEndOf="@+id/tvSunset"
            app:layout_constraintStart_toStartOf="@+id/tvSunset"
            tools:text="22:23" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWeather"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginBottom="@dimen/dimen_72dp"
        android:background="@drawable/bg_cards"
        android:padding="@dimen/dimen_8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clSunset"
        app:spanCount="3"
        tools:itemCount="8"
        tools:listitem="@layout/item_weather_card_view" />

</androidx.constraintlayout.widget.ConstraintLayout>